ops-test-2/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sre-app
  labels:
    app: sre-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sre-app
  template:
    metadata:
      labels:
        app: sre-app
    spec:
      containers:
      - name: app
        image: emon110852/sre-app2:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"

      - name: sidecar
        image: emon110852/sidecar:latest   
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
